--- a/AirbaseDB/AirbaseDB.vcxproj
+++ b/AirbaseDB/AirbaseDB.vcxproj
@@ -138,7 +138,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="createCommand.cpp" />
+    <ClCompile Include="ICommand.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="createCommand.h" />
+    <ClInclude Include="ICommand.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
