Finished main architecture

--- a/AirbaseDB/AirbaseDB.vcxproj
+++ b/AirbaseDB/AirbaseDB.vcxproj
@@ -138,6 +138,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AirbaseSystem.cpp" />
     <ClCompile Include="createCommand.cpp" />
     <ClCompile Include="deleteCommand.cpp" />
     <ClCompile Include="Dispatcher.cpp" />
@@ -150,6 +151,7 @@
     <ClCompile Include="updateCommand.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AirbaseSystem.h" />
     <ClInclude Include="createCommand.h" />
     <ClInclude Include="deleteCommand.h" />
     <ClInclude Include="Dispatcher.h" />
