--- a/AirbaseDB/AirbaseDB.vcxproj.filters
+++ b/AirbaseDB/AirbaseDB.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="GlobalConnection.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BinaryData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="updateCommand.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GlobalConnection.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BinaryData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
